# scclv2

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
bash/ar/dcgmm/: ar_dcgmm_2l.bash  ar_dcgmm_3l.bash  ar_parallel.bash  architectures.md
bash/ar/gmm/: ar_latent.bash  ar_latent_rts.bash  ar_rts.bash  ar_rts_visualize.bash  ar_supervised.bash  ar_unsupervised.bash  mnist-replay.bash  somsig.bash
bash/dgr/cgan/: cgan_dense.bash  cgan_dense2.bash  wgan-gp_dense.bash
bash/dgr/cvae/: cvae_latent.bash  cvae_latent_rts.bash  cvae_raw_conv.bash  cvae_raw_conv2.bash  cvae_raw_dense.bash  cvae_raw_rts.bash
bash/dgr/cvae/sa/: sa_cvae_latent.bash  sa_cvae_mnist.bash
bash/dgr/vae/: vae_features.bash  vae_raw.bash
bash/er/: er_latent.bash  er_latent_rts.bash  er_raw.bash  er_raw_rts.bash  sequential.bash
bash/ewc/: ewc.bash  ewc_rts.bash
bash/examples/replay/ar/: emnist.bash  latent.bash  mnist-somSigma.bash  mnist.bash
bash/examples/replay/dgr-cgan/: emnist.bash  latent.bash  mnist.bash
bash/examples/replay/dgr-cvae/: emnist.bash  latent.bash  mnist.bash
bash/examples/replay/dgr-wgan-gp/: emnist.bash  latent.bash  mnist.bash
bash/examples/replay/er/: emnist.bash  latent.bash  mnist.bash
bash/examples/rts/ar/: features.bash  mnist.bash
bash/examples/rts/dgr/: latent.bash  mnist.bash
bash/examples/rts/er/: latent.bash  mnist.bash
bash/examples/rts/ewc/: latent.bash  mnist.bash
bash/examples/rts/sa/: latent.bash  mnist.bash
bash/examples/rts/sft/: latent.bash  mnist.bash
src/cl_replay/api/data/: Dataset.py  (+1 more)
src/cl_replay/test/: Test.py
(+41 files in other folders)
