[metadata]
name = scclv2
version = 1.0.0
author = Alexander Krawczyk, Alexander Gepperth
author_email = alexander.krawczyk@cs.hs-fulda.de
description = A CL library for replay written in TF2/Keras
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src
